--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -62,6 +62,7 @@ dockers:
   build_flag_templates:
   - "--label=org.opencontainers.artifact.created={{.Date}}"
   - "--label=org.opencontainers.artifact.description={{.Env.OCI_DESCRIPTION}}"
+  - "--label=org.opencontainers.image.description={{.Env.OCI_DESCRIPTION}}"
   - "--label=org.opencontainers.image.created={{.Date}}"
   - "--label=org.opencontainers.image.authors={{.Env.OCI_AUTHORS}}"
   - "--label=org.opencontainers.image.source={{.GitURL}}"
@@ -79,6 +80,7 @@ dockers:
   build_flag_templates:
   - "--label=org.opencontainers.artifact.created={{.Date}}"
   - "--label=org.opencontainers.artifact.description={{.Env.OCI_DESCRIPTION}}"
+  - "--label=org.opencontainers.image.description={{.Env.OCI_DESCRIPTION}}"
   - "--label=org.opencontainers.image.created={{.Date}}"
   - "--label=org.opencontainers.image.authors={{.Env.OCI_AUTHORS}}"
   - "--label=org.opencontainers.image.source={{.GitURL}}"
