fix(config): default config should allowed to sort commit with scope containing a hyphen
Theoretically (see https://www.conventionalcommits.org/en/v1.0.0/#specification):
```
A scope MAY be provided after a type. A scope MUST consist of a noun describing a section of the codebase surrounded by parenthesis, e.g., fix(parser):
```

Some nouns like compound nouns may have a hyphen.

--- a/internal/config/testdata/config.yaml
+++ b/internal/config/testdata/config.yaml
@@ -10,13 +10,13 @@ filters:
     - Merge branch
 categories:
   - title: 'Features'
-    regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
+    regexp: '^.*?feat(\([[:word:]-]+\))??!?:.+$'
     weight: 1
   - title: 'Fixes'
-    regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
+    regexp: '^.*?fix(\([[:word:]-]+\))??!?:.+$'
     weight: 2
   - title: 'Documentation'
-    regexp: '^.*?docs(\([[:word:]]+\))??!?:.+$'
+    regexp: '^.*?docs(\([[:word:]-]+\))??!?:.+$'
     weight: 3
   - title: Others
     weight: 9999
