--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -1,4 +1,4 @@
-initial_release_message: | 
+initial_release_message: |
   Initial Release
 sort: asc
 filters:
@@ -11,13 +11,13 @@ filters:
     - Merge branch
 categories:
   - title: 'Features'
-    regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
+    regexp: '^.*?feat(\([[:word:]-]+\))??!?:.+$'
     weight: 10
   - title: 'Fixes'
-    regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
+    regexp: '^.*?fix(\([[:word:]-]+\))??!?:.+$'
     weight: 20
   - title: 'Documentation'
-    regexp: '^.*?docs(\([[:word:]]+\))??!?:.+$'
+    regexp: '^.*?docs(\([[:word:]-]+\))??!?:.+$'
     weight: 30
   - title: Others
     weight: 9999
