--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -27,3 +27,16 @@ jobs:
         with:
           version: v1.64.5
           args: --timeout=5m
+
+  golangci-version-check:
+    name: golangci-lint version check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Check golangci-lint version
+        shell: bash
+        run: |
+          set -xeuo pipefail
+          WORKFLOW_VERSION=$(awk -F 'version: ' '/version: v/ {print $2}' .github/workflows/golangci-lint.yml | head -n 1)
+          VERSION_FILE=$(cat .golangci.version)
+          test "$WORKFLOW_VERSION" == "$VERSION_FILE"
