chore: bump golangci from v1.64.5 to v2.8.0

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,8 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.{go,mod}]
+indent_style = tab
+
 [*.{yaml,yml}]
 indent_size = 2
